tests/semantic/fail/no-multiple-declaration-2.tiger
let
var x : int := 1
var x : string := 2
in
end
